<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.example.harmit.swooshcar.LoginActivity">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/box"
        android:hint="Username"
        android:inputType="textWebEditText"
        android:lines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/box"
        android:hint="Password"
        android:inputType="textWebPassword"
        android:lines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login_ori"
        android:text="Log In"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pwd_link1"
            android:textColor="@color/text_normal" />

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:text="@string/forgot_pwd_link2"
            android:textColor="@color/text_bold"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="115dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/or" />

    <ImageView
        android:layout_width="640dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_linlk1"
            android:textColor="@color/text_normal" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:text="@string/signup_link2"
            android:textColor="@color/text_bold"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>