<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.example.harmit.swooshcar.ForgetPwdActivity">

    <ImageView
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Recover Your Account"
        android:textColor="@color/black"
        android:textSize="22dp" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/forget_pwd1"
        android:textColor="@color/text_normal"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/forget_password_email"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/box"
        android:hint="email or Username"
        android:inputType="textWebEditText"
        android:lines="1"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/forget_password_submit"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login_ori"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="18dp" />

    <ImageView

        android:id="@+id/line"
        android:layout_width="640dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="340dp"
        android:src="@drawable/line" />


    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/linearLayout1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/move_to_login"
            android:textColor="@color/text_normal" />

        <TextView
            android:id="@+id/moveTologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:paddingLeft="5dp"
            android:text="@string/signin_link2"
            android:textColor="@color/text_bold"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
