<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harmit.swooshcar.CarActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="10dp">


            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_number_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextInputLayoutHintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/number_plate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/number_plate"
                        android:inputType="textWebEditText"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_numberplate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextInputLayoutHintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_manufacturer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/manufacturer"
                        android:inputType="textWebEditText"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextInputLayoutHintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/model"
                        android:inputType="textWebEditText"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_colour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    app:hintTextAppearance="@style/TextInputLayoutHintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_colour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/colour"
                        android:inputType="textWebEditText"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="Car Document Detail.. "
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Insurance"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/insurence"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:paddingRight="20dp"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="RC Book"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/rc_book"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:paddingRight="20dp"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="PUC"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/puc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:paddingRight="20dp"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="First Aid Kit"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/first_aid_kit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:paddingRight="20dp"
                            android:textColor="@color/black"
                            android:textSize="15dp" />
                    </RelativeLayout>

                </LinearLayout>


                <ImageView
                    android:id="@+id/set_car_image"
                    android:layout_width="300dp"
                    android:layout_height="300dp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
